[project]
name = "pytcoin"
version = "0.1.0"
description = ""
authors = [
    {name = "Duda",email = "mariaeduardaciarini03@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.2,<3.0.0)",
    "sckit (>=0.0.5,<0.0.6)",
    "learn (>=1.0.0,<2.0.0)",
    "streamlit (>=1.49.1,<2.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "yfinance (>=0.2.65,<0.3.0)",
    "altair (>=5.5.0,<6.0.0)"
]

[tool.poetry]
packages = [{include = "pytcoin", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
